--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "edit-json-file": "^1.2.1",
     "express": "^4.16.4",
     "mongoose": "^5.4.13",
@@ -16,6 +17,7 @@
     "nodemon": "^1.18.10"
   },
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   }
 }
