--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
-    "edit-json-file": "^1.2.1",
     "express": "^4.16.4",
-    "mongoose": "^5.4.13",
-    "short-id": "^0.1.0-1"
+    "mongoose": "^5.4.13"
   },
   "devDependencies": {
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint": "^5.14.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
     "nodemon": "^1.18.10"
   },
   "scripts": {
