--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
         "mongoose": "^5.4.13"
     },
     "devDependencies": {
-        "eslint-plugin-standard": "^4.0.0",
         "eslint": "^5.14.1",
         "eslint-config-standard": "^12.0.0",
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-node": "^8.0.1",
         "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "jest": "^24.1.0",
         "nodemon": "^1.18.10"
     },
     "scripts": {
         "dev": "nodemon src/index.js",
-        "start": "node src/index.js"
+        "start": "node src/index.js",
+        "test": "jest"
     }
 }
