--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "cors": "^2.8.5",
         "dotenv": "^6.2.0",
         "express": "^4.16.4",
-        "mongoose": "^5.4.13"
+        "mongoose": "^5.4.13",
+        "socket.io": "^2.2.0"
     },
     "devDependencies": {
         "eslint": "^5.14.1",
