--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "author": "Ygor Correa Azambuja <ygorazambuja@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^6.2.0",
         "express": "^4.16.4",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.4.13",
         "socket.io": "^2.2.0"
     },
