--- a/package.json
+++ b/package.json
@@ -16,17 +16,27 @@
     },
     "devDependencies": {
         "eslint": "^5.14.1",
+        "eslint-config-prettier": "^6.10.1",
         "eslint-config-standard": "^12.0.0",
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-node": "^8.0.1",
+        "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-promise": "^4.0.1",
         "eslint-plugin-standard": "^4.0.0",
+        "husky": "^4.2.5",
         "jest": "^24.1.0",
-        "nodemon": "^1.18.10"
+        "nodemon": "^1.18.10",
+        "prettier": "^2.0.4"
     },
     "scripts": {
         "dev": "nodemon src/index.js",
         "start": "node src/index.js",
-        "test": "jest"
+        "test": "jest",
+        "lint": "eslint . --fix"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "eslint . --fix"
+        }
     }
 }
